--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "node": "16.13.1"
   },
   "scripts": {
+    "start": "node index.js",
     "clean": "rm -rf public",
     "build": "npm install --prefix client && npm run build --prefix client",
     "deploy": "cp -a client/build/. public/",
