--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "phase-4-deploying-app-demo",
   "description": "Build scripts for Heroku",
   "engines": {
-    "node": "16.13.1",
-    "npm": "14.0.1"
+    "node": "16.13.1"
   },
   "scripts": {
       "clean": "rm -rf public",
